getting sam deploy to work

--- a/sam_template.yaml
+++ b/sam_template.yaml
@@ -35,7 +35,7 @@ Resources:
 Outputs:
   DownloadFile:
     Description: "API Gateway endpoint URL for the DownloadFile function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
   DownloadFile:
     Description: "DownloadFile Lambda Function ARN"
     Value: "DownloadFile.Arn"
