--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,6 @@ on:
   pull_request:
     branches:
       - main
-
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
@@ -16,4 +15,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
       - run: sam build --template sam_template.yaml --use-container
-      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name ebook_store_dapp_stack --image-repository 621544995223.dkr.ecr.us-west-2.amazonaws.com/ebook_store_dapp --capabilities CAPABILITY_IAM --region us-west-2
+      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name ebook-store-dapp-stack --image-repository 621544995223.dkr.ecr.us-west-2.amazonaws.com/ebook_store_dapp --capabilities CAPABILITY_IAM --region us-west-2
